exports[`common/component/module/text should render correctly 1`] = `
<div
  className="m-text module-text"
  itemScope={true}
  itemType="foo"
  role="list">
  <div
    className="m-text__block">
    <h3
      className="is-centered c-type--h3 m-text__headline">
      headline
    </h3>
    <div
      className="m-text__content">
      <p
        className="c-type--p"
        dangerouslySetInnerHTML={
          Object {
            "__html": "content",
          }
        } />
    </div>
    <div
      className="is-centered m-person m-text__content"
      itemScope={true}
      itemType="http://schema.org/Person">
      <p
        className="c-type--p m-person__name">
        <strong />
      </p>
      <address
        className="m-person__address c-type--address"
        itemProp="address"
        itemScope={true}
        itemType="http://schema.org/Address">
        <span
          className="m-person__street-address"
          itemProp="street-address" />
        <span
          className="m-person__postal-code"
          itemProp="postal-code" />
        <span
          className="m-person__locality"
          itemProp="locality" />
      </address>
      <p
        className="c-type--p m-person__email">
        <abbr
          title="E-Mail address">
          E.
        </abbr>
         
        <a
          href="malto:undefined"
          itemProp="email" />
      </p>
      <p
        className="c-type--p m-person__phone">
        <abbr
          title="Phonenumber">
          P.
        </abbr>
         
        <a
          href="tel:undefined"
          itemProp="telephone" />
      </p>
      <p
        className="c-type--p m-person__website">
        <abbr
          title="Website">
          W.
        </abbr>
         
        <a
          href="undefined" />
      </p>
    </div>
  </div>
  <div
    className="m-text__time is-centered">
    <time
      className="c-time">
      567
    </time>
  </div>
  <div
    className="m-text__link is-centered">
    <a
      className="c-link"
      onClick={[Function]}
      style={Object {}}
      tabIndex="0"
      title="Link title">
      <i
        aria-hidden="true"
        className="c-font-icon--earth" />
      Link label
    </a>
  </div>
  Module text children
</div>
`;

exports[`common/component/module/text should render no itemType if unset 1`] = `
<div
  className="m-text module-text"
  role="list">
  <div
    className="m-text__block">
    <h3
      className="is-centered c-type--h3 m-text__headline">
      headline
    </h3>
    <div
      className="m-text__content">
      <p
        className="c-type--p"
        dangerouslySetInnerHTML={
          Object {
            "__html": "content",
          }
        } />
    </div>
    <div
      className="is-centered m-person m-text__content"
      itemScope={true}
      itemType="http://schema.org/Person">
      <p
        className="c-type--p m-person__name">
        <strong />
      </p>
      <address
        className="m-person__address c-type--address"
        itemProp="address"
        itemScope={true}
        itemType="http://schema.org/Address">
        <span
          className="m-person__street-address"
          itemProp="street-address" />
        <span
          className="m-person__postal-code"
          itemProp="postal-code" />
        <span
          className="m-person__locality"
          itemProp="locality" />
      </address>
      <p
        className="c-type--p m-person__email">
        <abbr
          title="E-Mail address">
          E.
        </abbr>
         
        <a
          href="malto:undefined"
          itemProp="email" />
      </p>
      <p
        className="c-type--p m-person__phone">
        <abbr
          title="Phonenumber">
          P.
        </abbr>
         
        <a
          href="tel:undefined"
          itemProp="telephone" />
      </p>
      <p
        className="c-type--p m-person__website">
        <abbr
          title="Website">
          W.
        </abbr>
         
        <a
          href="undefined" />
      </p>
    </div>
  </div>
  <div
    className="m-text__time is-centered">
    <time
      className="c-time">
      567
    </time>
  </div>
  <div
    className="m-text__link is-centered">
    <a
      className="c-link"
      onClick={[Function]}
      style={Object {}}
      tabIndex="0"
      title="Link title">
      <i
        aria-hidden="true"
        className="c-font-icon--earth" />
      Link label
    </a>
  </div>
  Module text children
</div>
`;

exports[`common/component/module/text should return null if no content is given 1`] = `null`;
